properly invert stuff for talking